--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,9 @@
+# misc
+.DS_Store
+
+# production
+/build
+
 # Logs
 logs
 *.log
@@ -40,6 +46,8 @@ build/Release
 # Dependency directories
 node_modules/
 jspm_packages/
+/.pnp
+.pnp.js
 
 # TypeScript v1 declaration files
 typings/
@@ -71,6 +79,10 @@ typings/
 # dotenv environment variables file
 .env
 .env.test
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
 
 # parcel-bundler cache (https://parceljs.org/)
 .cache
