--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "mern-auth",
+  "name": "connect-chore",
   "version": "1.0.0",
-  "description": "auth for chore tracker",
+  "description": "",
   "main": "server.js",
   "scripts": {
     "client-install": "npm install --prefix client",
@@ -13,6 +13,7 @@
     "build": "cd client && npm run build",
     "heroku-postbuild": "npm run build"
   },
+  "proxy": "http://localhost:5000",
   "author": "hilary ferraro",
   "license": "MIT",
   "dependencies": {
@@ -23,10 +24,15 @@
     "express": "^4.17.1",
     "is-empty": "^1.2.0",
     "jsonwebtoken": "^8.5.1",
+    "materialize-css": "^1.0.0-rc.2",
     "mongoose": "^5.10.13",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
+    "react-materialize": "^3.9.3",
     "redux": "^4.0.5",
     "validator": "^13.1.17"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.6"
   }
 }
