--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "author": "hilary ferraro",
   "license": "MIT",
   "dependencies": {
+    "@material-ui/core": "^4.11.0",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "concurrently": "^5.3.0",
@@ -29,6 +30,7 @@
     "mongoose": "^5.10.13",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
+    "react-bootstrap": "^4.2.1",
     "react-materialize": "^3.9.3",
     "redux": "^4.0.5",
     "validator": "^13.1.17"
