--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@material-ui/core": "^4.11.0",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
+    "bootstrap": "^4.5.3",
     "concurrently": "^5.3.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
