--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
     "jwt-decode": "^3.1.1",
     "react": "^17.0.1",
     "react-bootstrap": "^1.4.0",
+    "react-datepicker": "^3.3.0",
     "react-dom": "^17.0.1",
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
