--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "author": "hilary ferraro",
   "license": "MIT",
   "dependencies": {
+    "axios": "^0.21.0",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "concurrently": "^5.3.0",
