--- a/package.json
+++ b/package.json
@@ -17,10 +17,10 @@
   "author": "hilary ferraro",
   "license": "MIT",
   "dependencies": {
-    "animate.css": "^4.1.1",
     "@fortawesome/fontawesome-svg-core": "^1.2.32",
     "@fortawesome/free-regular-svg-icons": "^5.15.1",
     "@fortawesome/react-fontawesome": "^0.1.13",
+    "animate.css": "^4.1.1",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "concurrently": "^5.3.0",
@@ -33,6 +33,7 @@
     "mongoose": "^5.10.13",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
+    "react-countdown-circle-timer": "^2.3.7",
     "validator": "^13.1.17"
   },
   "devDependencies": {
