--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "morgan": "^1.10.0",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
+    "redux-devtools-extension": "^2.13.8",
     "validator": "^13.1.17"
   },
   "devDependencies": {
