--- a/client/package.json
+++ b/client/package.json
@@ -3,6 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.32",
+    "@fortawesome/free-regular-svg-icons": "^5.15.1",
+    "@fortawesome/react-fontawesome": "^0.1.13",
     "@testing-library/jest-dom": "^5.11.5",
     "@testing-library/react": "^11.1.2",
     "@testing-library/user-event": "^12.2.2",
@@ -13,6 +16,7 @@
     "jwt-decode": "^3.1.1",
     "react": "^17.0.1",
     "react-bootstrap": "^1.4.0",
+    "react-confetti": "^6.0.0",
     "react-datepicker": "^3.3.0",
     "react-dom": "^17.0.1",
     "react-redux": "^7.2.2",
@@ -21,10 +25,7 @@
     "react-scroll": "^1.8.1",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
-    "web-vitals": "^0.2.4",
-    "@fortawesome/fontawesome-svg-core": "^1.2.32",
-    "@fortawesome/free-regular-svg-icons": "^5.15.1",
-    "@fortawesome/react-fontawesome": "^0.1.13"
+    "web-vitals": "^0.2.4"
   },
   "scripts": {
     "start": "react-scripts start",
