--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "morgan": "^1.10.0",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
+    "react-use": "^15.3.4",
     "redux-devtools-extension": "^2.13.8",
     "validator": "^13.1.17"
   },
